<resources>
    <string name="app_name">Ashtanga Yoga Cork</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_ayc">AycActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_prices">Prices</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_teacher">Teacher</string>
    <string name="menu_studio">Studio</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_workshops">Workshops</string>
    <string name="menu_contact">Workshops</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_profile">Profile</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_ayc_navigation">AycNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_logout">Logout</string>
    <string name="title_prices">Prices</string>
    <string name="title_profile">Profile</string>
    <string name="title_classes">Classes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Sync Preferences -->
    <string name="gravatar">Your gravatar</string>
    <string name="profile">Profile</string>
    <string name="phoneno">Telephone number</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_email">Email</string>
    <string name="notifications_sms">SMS</string>
</resources>
