<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_prices"
        android:name="ie.ayc.ui.PricesFragment"
        android:label="@string/title_prices"
        tools:layout="@layout/fragment_prices" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ie.ayc.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="ie.ayc.ui.ClassesFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />
</navigation>
